--- a/src/pages/main/ui/MainPage.module.css
+++ b/src/pages/main/ui/MainPage.module.css
@@ -7,6 +7,7 @@
 }
 
 .content {
+	position: relative;
 	flex: 1;
 	padding-bottom: 16px;
 	overflow-y: auto;
